# smart-trashcan

./: Cargo.toml
.cargo/: config.toml
src/: display.rs  lib.rs  lora.rs  main.rs  sensor.rs  servo.rs  system.rs  wifi.rs
