[package]
edition      = "2024"
name         = "trashcan"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "trashcan"
path = "./src/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32s3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt"] }
esp-alloc        = { version = "0.9.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }


embedded-hal = "1.0.0"
heapless = { version = "0.9.2", features = ["defmt", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

lora-phy = {path="/home/kapj1coh/crack-of-doom/uni/fall-2025/soen-422/labs/lab-3/lora-rs/lora-phy/", version = "3.0.2-alph.2-alpha", features = ["lorawan-radio", "defmt-03"] }
lorawan-device = {path="/home/kapj1coh/crack-of-doom/uni/fall-2025/soen-422/labs/lab-3/lora-rs/lorawan-device/", version = "0.12.2", features = ["embassy-time", "defmt-03", "serde"] }
hcsr04 = { version = "0.1.3", features = ["defmt"] }
weact-studio-epd = "0.1.2"
display-interface-spi = "0.5.0"
embedded-hal-bus = { version = "0.3.0", features = ["alloc", "async", "defmt-03"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
display-interface = { version = "0.5.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
vl53l0x = "1.0.1"
embassy-futures = { version = "0.1.2", features = ["defmt"] }
# lorawan-device = { version = "~0.12", features = ["embassy-time", "defmt", "serde"] }
# embassy-time = { version = ">0.4", features = ["defmt"] }


[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "defmt",
  "embassy",
  "external-executor",
  "xtensa-semihosting",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
